PLY/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LITERALCHAR
    PIPE
    SLASH

Grammar

Rule 0     S' -> document
Rule 1     document -> block
Rule 2     document -> document block
Rule 3     block -> heading
Rule 4     block -> quote
Rule 5     block -> bulletitem
Rule 6     block -> code
Rule 7     block -> paragraph
Rule 8     block -> bolditem
Rule 9     block -> italicitem
Rule 10    block -> urllink
Rule 11    block -> heading NEWLINE
Rule 12    block -> quote NEWLINE
Rule 13    block -> bulletitem NEWLINE
Rule 14    block -> code NEWLINE
Rule 15    block -> paragraph NEWLINE
Rule 16    block -> bolditem NEWLINE
Rule 17    block -> italicitem NEWLINE
Rule 18    block -> urllink NEWLINE
Rule 19    heading -> HASH sentence NEWLINE
Rule 20    bulletitem -> BULLET sentence NEWLINE
Rule 21    bolditem -> BULLET sentence BULLET
Rule 22    bolditem -> FLOOR sentence FLOOR
Rule 23    italicitem -> BULLET BULLET sentence BULLET BULLET
Rule 24    italicitem -> FLOOR FLOOR sentence FLOOR FLOOR
Rule 25    urllink -> LEFTBRACKET sentence RIGHTBRACKET LEFTMBRACKET sentence RIGHTMBRACKET
Rule 26    quote -> GT sentence NEWLINE
Rule 27    word -> ALPHANUMERIC
Rule 28    word -> ALPHANUMERIC word
Rule 29    word -> PUNCTUATION
Rule 30    word -> PUNCTUATION word
Rule 31    sentence -> word
Rule 32    sentence -> sentence WS word
Rule 33    paragraph -> sentence NEWLINE
Rule 34    paragraph -> sentence NEWLINE paragraph
Rule 35    code -> BACKTICK BACKTICK BACKTICK NEWLINE paragraph BACKTICK BACKTICK BACKTICK

Terminals, with rules where they appear

ALPHANUMERIC         : 27 28
BACKTICK             : 35 35 35 35 35 35
BULLET               : 20 21 21 23 23 23 23
FLOOR                : 22 22 24 24 24 24
GT                   : 26
HASH                 : 19
LEFTBRACKET          : 25
LEFTMBRACKET         : 25
LITERALCHAR          : 
NEWLINE              : 11 12 13 14 15 16 17 18 19 20 26 33 34 35
PIPE                 : 
PUNCTUATION          : 29 30
RIGHTBRACKET         : 25
RIGHTMBRACKET        : 25
SLASH                : 
WS                   : 32
error                : 

Nonterminals, with rules where they appear

block                : 1 2
bolditem             : 8 16
bulletitem           : 5 13
code                 : 6 14
document             : 2 0
heading              : 3 11
italicitem           : 9 17
paragraph            : 7 15 34 35
quote                : 4 12
sentence             : 19 20 21 22 23 24 25 25 26 32 33 34
urllink              : 10 18
word                 : 28 30 31 32

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . block
    (2) document -> . document block
    (3) block -> . heading
    (4) block -> . quote
    (5) block -> . bulletitem
    (6) block -> . code
    (7) block -> . paragraph
    (8) block -> . bolditem
    (9) block -> . italicitem
    (10) block -> . urllink
    (11) block -> . heading NEWLINE
    (12) block -> . quote NEWLINE
    (13) block -> . bulletitem NEWLINE
    (14) block -> . code NEWLINE
    (15) block -> . paragraph NEWLINE
    (16) block -> . bolditem NEWLINE
    (17) block -> . italicitem NEWLINE
    (18) block -> . urllink NEWLINE
    (19) heading -> . HASH sentence NEWLINE
    (26) quote -> . GT sentence NEWLINE
    (20) bulletitem -> . BULLET sentence NEWLINE
    (35) code -> . BACKTICK BACKTICK BACKTICK NEWLINE paragraph BACKTICK BACKTICK BACKTICK
    (33) paragraph -> . sentence NEWLINE
    (34) paragraph -> . sentence NEWLINE paragraph
    (21) bolditem -> . BULLET sentence BULLET
    (22) bolditem -> . FLOOR sentence FLOOR
    (23) italicitem -> . BULLET BULLET sentence BULLET BULLET
    (24) italicitem -> . FLOOR FLOOR sentence FLOOR FLOOR
    (25) urllink -> . LEFTBRACKET sentence RIGHTBRACKET LEFTMBRACKET sentence RIGHTMBRACKET
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    HASH            shift and go to state 11
    GT              shift and go to state 13
    BULLET          shift and go to state 14
    BACKTICK        shift and go to state 15
    FLOOR           shift and go to state 16
    LEFTBRACKET     shift and go to state 17
    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    document                       shift and go to state 1
    block                          shift and go to state 2
    heading                        shift and go to state 3
    quote                          shift and go to state 4
    bulletitem                     shift and go to state 5
    code                           shift and go to state 6
    paragraph                      shift and go to state 7
    bolditem                       shift and go to state 8
    italicitem                     shift and go to state 9
    urllink                        shift and go to state 10
    sentence                       shift and go to state 12
    word                           shift and go to state 18

state 1

    (0) S' -> document .
    (2) document -> document . block
    (3) block -> . heading
    (4) block -> . quote
    (5) block -> . bulletitem
    (6) block -> . code
    (7) block -> . paragraph
    (8) block -> . bolditem
    (9) block -> . italicitem
    (10) block -> . urllink
    (11) block -> . heading NEWLINE
    (12) block -> . quote NEWLINE
    (13) block -> . bulletitem NEWLINE
    (14) block -> . code NEWLINE
    (15) block -> . paragraph NEWLINE
    (16) block -> . bolditem NEWLINE
    (17) block -> . italicitem NEWLINE
    (18) block -> . urllink NEWLINE
    (19) heading -> . HASH sentence NEWLINE
    (26) quote -> . GT sentence NEWLINE
    (20) bulletitem -> . BULLET sentence NEWLINE
    (35) code -> . BACKTICK BACKTICK BACKTICK NEWLINE paragraph BACKTICK BACKTICK BACKTICK
    (33) paragraph -> . sentence NEWLINE
    (34) paragraph -> . sentence NEWLINE paragraph
    (21) bolditem -> . BULLET sentence BULLET
    (22) bolditem -> . FLOOR sentence FLOOR
    (23) italicitem -> . BULLET BULLET sentence BULLET BULLET
    (24) italicitem -> . FLOOR FLOOR sentence FLOOR FLOOR
    (25) urllink -> . LEFTBRACKET sentence RIGHTBRACKET LEFTMBRACKET sentence RIGHTMBRACKET
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    HASH            shift and go to state 11
    GT              shift and go to state 13
    BULLET          shift and go to state 14
    BACKTICK        shift and go to state 15
    FLOOR           shift and go to state 16
    LEFTBRACKET     shift and go to state 17
    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    block                          shift and go to state 21
    heading                        shift and go to state 3
    quote                          shift and go to state 4
    bulletitem                     shift and go to state 5
    code                           shift and go to state 6
    paragraph                      shift and go to state 7
    bolditem                       shift and go to state 8
    italicitem                     shift and go to state 9
    urllink                        shift and go to state 10
    sentence                       shift and go to state 12
    word                           shift and go to state 18

state 2

    (1) document -> block .

    HASH            reduce using rule 1 (document -> block .)
    GT              reduce using rule 1 (document -> block .)
    BULLET          reduce using rule 1 (document -> block .)
    BACKTICK        reduce using rule 1 (document -> block .)
    FLOOR           reduce using rule 1 (document -> block .)
    LEFTBRACKET     reduce using rule 1 (document -> block .)
    ALPHANUMERIC    reduce using rule 1 (document -> block .)
    PUNCTUATION     reduce using rule 1 (document -> block .)
    $end            reduce using rule 1 (document -> block .)


state 3

    (3) block -> heading .
    (11) block -> heading . NEWLINE

    HASH            reduce using rule 3 (block -> heading .)
    GT              reduce using rule 3 (block -> heading .)
    BULLET          reduce using rule 3 (block -> heading .)
    BACKTICK        reduce using rule 3 (block -> heading .)
    FLOOR           reduce using rule 3 (block -> heading .)
    LEFTBRACKET     reduce using rule 3 (block -> heading .)
    ALPHANUMERIC    reduce using rule 3 (block -> heading .)
    PUNCTUATION     reduce using rule 3 (block -> heading .)
    $end            reduce using rule 3 (block -> heading .)
    NEWLINE         shift and go to state 22


state 4

    (4) block -> quote .
    (12) block -> quote . NEWLINE

    HASH            reduce using rule 4 (block -> quote .)
    GT              reduce using rule 4 (block -> quote .)
    BULLET          reduce using rule 4 (block -> quote .)
    BACKTICK        reduce using rule 4 (block -> quote .)
    FLOOR           reduce using rule 4 (block -> quote .)
    LEFTBRACKET     reduce using rule 4 (block -> quote .)
    ALPHANUMERIC    reduce using rule 4 (block -> quote .)
    PUNCTUATION     reduce using rule 4 (block -> quote .)
    $end            reduce using rule 4 (block -> quote .)
    NEWLINE         shift and go to state 23


state 5

    (5) block -> bulletitem .
    (13) block -> bulletitem . NEWLINE

    HASH            reduce using rule 5 (block -> bulletitem .)
    GT              reduce using rule 5 (block -> bulletitem .)
    BULLET          reduce using rule 5 (block -> bulletitem .)
    BACKTICK        reduce using rule 5 (block -> bulletitem .)
    FLOOR           reduce using rule 5 (block -> bulletitem .)
    LEFTBRACKET     reduce using rule 5 (block -> bulletitem .)
    ALPHANUMERIC    reduce using rule 5 (block -> bulletitem .)
    PUNCTUATION     reduce using rule 5 (block -> bulletitem .)
    $end            reduce using rule 5 (block -> bulletitem .)
    NEWLINE         shift and go to state 24


state 6

    (6) block -> code .
    (14) block -> code . NEWLINE

    HASH            reduce using rule 6 (block -> code .)
    GT              reduce using rule 6 (block -> code .)
    BULLET          reduce using rule 6 (block -> code .)
    BACKTICK        reduce using rule 6 (block -> code .)
    FLOOR           reduce using rule 6 (block -> code .)
    LEFTBRACKET     reduce using rule 6 (block -> code .)
    ALPHANUMERIC    reduce using rule 6 (block -> code .)
    PUNCTUATION     reduce using rule 6 (block -> code .)
    $end            reduce using rule 6 (block -> code .)
    NEWLINE         shift and go to state 25


state 7

    (7) block -> paragraph .
    (15) block -> paragraph . NEWLINE

    HASH            reduce using rule 7 (block -> paragraph .)
    GT              reduce using rule 7 (block -> paragraph .)
    BULLET          reduce using rule 7 (block -> paragraph .)
    BACKTICK        reduce using rule 7 (block -> paragraph .)
    FLOOR           reduce using rule 7 (block -> paragraph .)
    LEFTBRACKET     reduce using rule 7 (block -> paragraph .)
    ALPHANUMERIC    reduce using rule 7 (block -> paragraph .)
    PUNCTUATION     reduce using rule 7 (block -> paragraph .)
    $end            reduce using rule 7 (block -> paragraph .)
    NEWLINE         shift and go to state 26


state 8

    (8) block -> bolditem .
    (16) block -> bolditem . NEWLINE

    HASH            reduce using rule 8 (block -> bolditem .)
    GT              reduce using rule 8 (block -> bolditem .)
    BULLET          reduce using rule 8 (block -> bolditem .)
    BACKTICK        reduce using rule 8 (block -> bolditem .)
    FLOOR           reduce using rule 8 (block -> bolditem .)
    LEFTBRACKET     reduce using rule 8 (block -> bolditem .)
    ALPHANUMERIC    reduce using rule 8 (block -> bolditem .)
    PUNCTUATION     reduce using rule 8 (block -> bolditem .)
    $end            reduce using rule 8 (block -> bolditem .)
    NEWLINE         shift and go to state 27


state 9

    (9) block -> italicitem .
    (17) block -> italicitem . NEWLINE

    HASH            reduce using rule 9 (block -> italicitem .)
    GT              reduce using rule 9 (block -> italicitem .)
    BULLET          reduce using rule 9 (block -> italicitem .)
    BACKTICK        reduce using rule 9 (block -> italicitem .)
    FLOOR           reduce using rule 9 (block -> italicitem .)
    LEFTBRACKET     reduce using rule 9 (block -> italicitem .)
    ALPHANUMERIC    reduce using rule 9 (block -> italicitem .)
    PUNCTUATION     reduce using rule 9 (block -> italicitem .)
    $end            reduce using rule 9 (block -> italicitem .)
    NEWLINE         shift and go to state 28


state 10

    (10) block -> urllink .
    (18) block -> urllink . NEWLINE

    HASH            reduce using rule 10 (block -> urllink .)
    GT              reduce using rule 10 (block -> urllink .)
    BULLET          reduce using rule 10 (block -> urllink .)
    BACKTICK        reduce using rule 10 (block -> urllink .)
    FLOOR           reduce using rule 10 (block -> urllink .)
    LEFTBRACKET     reduce using rule 10 (block -> urllink .)
    ALPHANUMERIC    reduce using rule 10 (block -> urllink .)
    PUNCTUATION     reduce using rule 10 (block -> urllink .)
    $end            reduce using rule 10 (block -> urllink .)
    NEWLINE         shift and go to state 29


state 11

    (19) heading -> HASH . sentence NEWLINE
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    sentence                       shift and go to state 30
    word                           shift and go to state 18

state 12

    (33) paragraph -> sentence . NEWLINE
    (34) paragraph -> sentence . NEWLINE paragraph
    (32) sentence -> sentence . WS word

    NEWLINE         shift and go to state 31
    WS              shift and go to state 32


state 13

    (26) quote -> GT . sentence NEWLINE
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    sentence                       shift and go to state 33
    word                           shift and go to state 18

state 14

    (20) bulletitem -> BULLET . sentence NEWLINE
    (21) bolditem -> BULLET . sentence BULLET
    (23) italicitem -> BULLET . BULLET sentence BULLET BULLET
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    BULLET          shift and go to state 34
    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    sentence                       shift and go to state 35
    word                           shift and go to state 18

state 15

    (35) code -> BACKTICK . BACKTICK BACKTICK NEWLINE paragraph BACKTICK BACKTICK BACKTICK

    BACKTICK        shift and go to state 36


state 16

    (22) bolditem -> FLOOR . sentence FLOOR
    (24) italicitem -> FLOOR . FLOOR sentence FLOOR FLOOR
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    FLOOR           shift and go to state 37
    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    sentence                       shift and go to state 38
    word                           shift and go to state 18

state 17

    (25) urllink -> LEFTBRACKET . sentence RIGHTBRACKET LEFTMBRACKET sentence RIGHTMBRACKET
    (31) sentence -> . word
    (32) sentence -> . sentence WS word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    sentence                       shift and go to state 39
    word                           shift and go to state 18

state 18

    (31) sentence -> word .

    NEWLINE         reduce using rule 31 (sentence -> word .)
    WS              reduce using rule 31 (sentence -> word .)
    BULLET          reduce using rule 31 (sentence -> word .)
    FLOOR           reduce using rule 31 (sentence -> word .)
    RIGHTBRACKET    reduce using rule 31 (sentence -> word .)
    RIGHTMBRACKET   reduce using rule 31 (sentence -> word .)


state 19

    (27) word -> ALPHANUMERIC .
    (28) word -> ALPHANUMERIC . word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    NEWLINE         reduce using rule 27 (word -> ALPHANUMERIC .)
    WS              reduce using rule 27 (word -> ALPHANUMERIC .)
    BULLET          reduce using rule 27 (word -> ALPHANUMERIC .)
    FLOOR           reduce using rule 27 (word -> ALPHANUMERIC .)
    RIGHTBRACKET    reduce using rule 27 (word -> ALPHANUMERIC .)
    RIGHTMBRACKET   reduce using rule 27 (word -> ALPHANUMERIC .)
    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    word                           shift and go to state 40

state 20

    (29) word -> PUNCTUATION .
    (30) word -> PUNCTUATION . word
    (27) word -> . ALPHANUMERIC
    (28) word -> . ALPHANUMERIC word
    (29) word -> . PUNCTUATION
    (30) word -> . PUNCTUATION word

    NEWLINE         reduce using rule 29 (word -> PUNCTUATION .)
    WS              reduce using rule 29 (word -> PUNCTUATION .)
    BULLET          reduce using rule 29 (word -> PUNCTUATION .)
    FLOOR           reduce using rule 29 (word -> PUNCTUATION .)
    RIGHTBRACKET    reduce using rule 29 (word -> PUNCTUATION .)
    RIGHTMBRACKET   reduce using rule 29 (word -> PUNCTUATION .)
    ALPHANUMERIC    shift and go to state 19
    PUNCTUATION     shift and go to state 20

    word                           shift and go to state 41

state 21

    (2) document -> document block .

    HASH            reduce using rule 2 (document -> document block .)
    GT              reduce using rule 2 (document -> document block .)
    BULLET          reduce using rule 2 (document -> document block .)
    BACKTICK        reduce using rule 2 (document -> document block .)
    FLOOR           reduce using rule 2 (document -> document block .)
    LEFTBRACKET     reduce using rule 2 (document -> document block .)
    ALPHANUMERIC    reduce using rule 2 (document -> document block .)
    PUNCTUATION     reduce using rule 2 (document -> document block .)
    $end            reduce using rule 2 (document -> document block .)


state 22

    (11) block -> heading NEWLINE .

    HASH            reduce using rule 11 (block -> heading NEWLINE .)
    GT              reduce using rule 11 (block -> heading NEWLINE .)
    BULLET          reduce using rule 11 (block -> heading NEWLINE .)
    BACKTICK        reduce using rule 11 (block -> heading NEWLINE .)
    FLOOR           reduce using rule 11 (block -> heading NEWLINE .)
    LEFTBRACKET     reduce using rule 11 (block -> heading NEWLINE .)
    ALPHANUMERIC    reduce using rule 11 (block -> heading NEWLINE .)
    PUNCTUATION     reduce using rule 11 (block -> heading NEWLINE .)
    $end            reduce using rule 11 (block -> heading NEWLINE .)


state 23

    (12) block -> quote NEWLINE .

    HASH            reduce using rule 12 (block -> quote NEWLINE .)
    GT              reduce using rule 12 (block -> quote NEWLINE .)
    BULLET          reduce using rule 12 (block -> quote NEWLINE .)
    BACKTICK        reduce using rule 12 (block -> quote NEWLINE .)
    FLOOR           reduce using rule 12 (block -> quote NEWLINE .)
    LEFTBRACKET     reduce using rule 12 (block -> quote NEWLINE .)
    ALPHANUMERIC    reduce using rule 12 (block -> quote NEWLINE .)
    PUNCTUATION     reduce using rule 12 (block -> quote NEWLINE .)
    $end            reduce using rule 12 (block -> quote NEWLINE .)


state 24

    (13) block -> bulletitem NEWLINE .

    HASH            reduce using rule 13 (block -> bulletitem NEWLINE .)
    GT              reduce using rule 13 (block -> bulletitem NEWLINE .)
    BULLET          reduce using rule 13 (block -> bulletitem NEWLINE .)
    BACKTICK        reduce using rule 13 (block -> bulletitem NEWLINE .)
    FLOOR           reduce using rule 13 (block -> bulletitem NEWLINE .)
    LEFTBRACKET     reduce using rule 13 (block -> bulletitem NEWLINE .)
    ALPHANUMERIC    reduce using rule 13 (block -> bulletitem NEWLINE .)
    PUNCTUATION     reduce using rule 13 (block -> bulletitem NEWLINE .)
    $end            reduce using rule 13 (block -> bulletitem NEWLINE .)


state 25

    (14) block -> code NEWLINE .

    HASH            reduce using rule 14 (block -> code NEWLINE .)
    GT              reduce using rule 14 (block -> code NEWLINE .)
    BULLET          reduce using rule 14 (block -> code NEWLINE .)
    BACKTICK        reduce using rule 14 (block -> code NEWLINE .)
    FLOOR           reduce using rule 14 (block -> code NEWLINE .)
    LEFTBRACKET     reduce using rule 14 (block -> code NEWLINE .)
    ALPHANUMERIC    reduce using rule 14 (block -> code NEWLINE .)
    PUNCTUATION     reduce using rule 14 (block -> code NEWLINE .)
    $end            reduce using rule 14 (block -> code NEWLINE .)


state 26

    (15) block -> paragraph NEWLINE .

    HASH            reduce using rule 15 (block -> paragraph NEWLINE .)
    GT              reduce using rule 15 (block -> paragraph NEWLINE .)
    BULLET          reduce using rule 15 (block -> paragraph NEWLINE .)
    BACKTICK        reduce using rule 15 (block -> paragraph NEWLINE .)
    FLOOR           reduce using rule 15 (block -> paragraph NEWLINE .)
    LEFTBRACKET     reduce using rule 15 (block -> paragraph NEWLINE .)
    ALPHANUMERIC    reduce using rule 15 (block -> paragraph NEWLINE .)
    PUNCTUATION     reduce using rule 15 (block -> paragraph NEWLINE .)
    $end            reduce using rule 15 (block -> paragraph NEWLINE .)


state 27

    (16) block -> bolditem NEWLINE .

    HASH            reduce using rule 16 (block -> bolditem NEWLINE .)
    GT              reduce using rule 16 (block -> bolditem NEWLINE .)
    BULLET          reduce using rule 16 (block -> bolditem NEWLINE .)
    BACKTICK        reduce using rule 16 (block -> bolditem NEWLINE .)
    FLOOR           reduce using rule 16 (block -> bolditem NEWLINE .)
    LEFTBRACKET     reduce using rule 16 (block -> bolditem NEWLINE .)
    ALPHANUMERIC    reduce using rule 16 (block -> bolditem NEWLINE .)
    PUNCTUATION     reduce using rule 16 (block -> bolditem NEWLINE .)
    $end            reduce using rule 16 (block -> bolditem NEWLINE .)


state 28

    (17) block -> italicitem NEWLINE .

    HASH            reduce using rule 17 (block -> italicitem NEWLINE .)
    GT              reduce using rule 17 (block -> italicitem NEWLINE .)
    BULLET          reduce using rule 17 (block -> italicitem NEWLINE .)
    BACKTICK        reduce using rule 17 (block -> italicitem NEWLINE .)
    FLOOR           reduce using rule 17 (block -> italicitem NEWLINE .)
    LEFTBRACKET     reduce using rule 17 (block -> italicitem NEWLINE .)
    ALPHANUMERIC    reduce using rule 17 (block -> italicitem NEWLINE .)
    PUNCTUATION     reduce using rule 17 (block -> italicitem NEWLINE .)
    $end            reduce using rule 17 (block -> italicitem NEWLINE .)


state 29

    (18) block -> urllink NEWLINE .

    HASH            reduce using rule 18 (block -> urllink NEWLINE .)
    GT              reduce using rule 18 (block -> urllink NEWLINE .)
    BULLET          reduce using rule 18 (block -> urllink NEWLINE .)
    BACKTICK        reduce using rule 18 (block -> urllink NEWLINE .)
    FLOOR           reduce using rule 18 (block -> urllink NEWLINE .)
    LEFTBRACKET     reduce using rule 18 (block -> urllink NEWLINE .)
    ALPHANUMERIC    reduce using rule 18 (block -> urllink NEWLINE .)
    PUNCTUATION     reduce using rule 18 (block -> urllink NEWLINE .)
    $end            reduce using rule 18 (block -> urllink NEWLINE .)


state 30

    (19) heading -> HASH sentence . NEWLINE
    (32) sentence -> sentence . WS word

    NEWLINE         shift and go to state 42
    WS              shift and go to state 32


state 31
